--- a/index.html
+++ b/index.html
@@ -261,16 +261,11 @@
             </div>
         </div>
         <div class="contact-form">
-            <form action="">
-                <input type="" placeholder="Seu Nome" required>
-                <input type="email" placeholder="Seu e-mail" required>
+       
 
-                <input type="" placeholder="Assunto">
-                <textarea name="" id="" cols="40" rows="10" placeholder="Mensagem" required></textarea>
-                <input type="submit" value="Enviar" class="send">
+                <a href="https://wa.me/5531984204877?text=Ol%C3%A1,%20Juliano!" value="Contato via WhatsApp" class="send">
 
 
-            </form>
         </div>
     </section>
 
