--- a/index.html
+++ b/index.html
@@ -260,13 +260,13 @@
 
             </div>
         </div>
-        <div class="contact-form">
+
        
 
-                <a href="https://wa.me/5531984204877?text=Ol%C3%A1,%20Juliano!" value="Contato via WhatsApp" class="send">
+                <a href="https://wa.me/5531984204877?text=Ol%C3%A1,%20Juliano!" >Contato via WhatsApp </a>
 
 
-        </div>
+
     </section>
 
     <div class="last-text">
