--- a/index.html
+++ b/index.html
@@ -260,12 +260,11 @@
 
             </div>
         </div>
+        <div class="contact-icons">
+            
+            <a href="https://wa.me/5531984204877?text=Ol%C3%A1,%20Juliano!" style="--i:8;"><i class='bx bxl-whatsapp' target="_blank"></i></a>
 
-       
-
-                <a href="https://wa.me/5531984204877?text=Ol%C3%A1,%20Juliano!" >Contato via WhatsApp </a>
-
-
+        </div>
 
     </section>
 
