--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <a href="https://www.facebook.com/julianocxc/" style="--i:7;"><i class='bx bxl-facebook' target="_blank"></i></a>
                 <a href="https://wa.me/5531984204877?text=Ol%C3%A1,%20Juliano!" style="--i:8;"><i class='bx bxl-whatsapp' target="_blank"></i></a>
                 <a href="https://www.linkedin.com/in/julianogti/" style="--i:9;"><i class='bx bxl-linkedin' target="_blank" ></i></a>
-
+                <a href="https://llfl-my.sharepoint.com/:b:/g/personal/juliano_llfl_onmicrosoft_com/EYFrsdWAl4VMtNMEVlOfMIUB-gkGzAMwBUkYHndo5vWtdw?e=EvhhPY" style="--i:10;"><i class='bx bxl-curriculo' target="_blank" ></i></a>
             </div>
         </div>
 
