--- a/index.html
+++ b/index.html
@@ -253,11 +253,9 @@
                 <li><i class='bx bx-phone-call'></i> +5531984204877</a></li>
             </div>
             <div class="contact-icons">
-                <a href="https://www.youtube.com/@Julianoqm" style="--i:6;"><i class='bx bxl-youtube' target="_blank"></i></a>
-                <a href="https://www.facebook.com/julianocxc/" style="--i:7;"><i class='bx bxl-facebook' target="_blank"></i></a>
                 <a href="https://wa.me/5531984204877?text=Ol%C3%A1,%20Juliano!" style="--i:8;"><i class='bx bxl-whatsapp' target="_blank"></i></a>
                 <a href="https://www.linkedin.com/in/julianogti/" style="--i:9;"><i class='bx bxl-linkedin' target="_blank" ></i></a>
-                <a href="https://llfl-my.sharepoint.com/:b:/g/personal/juliano_llfl_onmicrosoft_com/EYFrsdWAl4VMtNMEVlOfMIUB-gkGzAMwBUkYHndo5vWtdw?e=EvhhPY" style="--i:9;"><i class='bx bxl-download' target="_blank" ></i></a>
+                <a href="https://llfl-my.sharepoint.com/:b:/g/personal/juliano_llfl_onmicrosoft_com/EYFrsdWAl4VMtNMEVlOfMIUB-gkGzAMwBUkYHndo5vWtdw?e=EvhhPY" style="--i:6;"><i class='bx bxl-telegram' target="_blank"></i></a>
             </div>
         </div>
 
